; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_cd-freebsd.c_FreeBSDCDReadSectorFAD.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_cd-freebsd.c_FreeBSDCDReadSectorFAD.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hCDROM = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @FreeBSDCDReadSectorFAD to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @FreeBSDCDReadSectorFAD(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %6 = load i32, i32* @hCDROM, align 4
  %7 = icmp ne i32 %6, -1
  br i1 %7, label %8, label %18

8:                                                ; preds = %2
  %9 = load i32, i32* @hCDROM, align 4
  %10 = load i32, i32* %4, align 4
  %11 = sub nsw i32 %10, 150
  %12 = mul nsw i32 %11, 2352
  %13 = load i32, i32* @SEEK_SET, align 4
  %14 = call i32 @lseek(i32 %9, i32 %12, i32 %13)
  %15 = load i32, i32* @hCDROM, align 4
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @read(i32 %15, i8* %16, i32 2352)
  store i32 1, i32* %3, align 4
  br label %19

18:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %19

19:                                               ; preds = %18, %8
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @lseek(i32, i32, i32) #1

declare dso_local i32 @read(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
